<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidCalc</string>
    
    
    <string name="mempush">MemPush (0)</string>
    <string name="mempop">MemPop (0)</string>
    <string name="memclear">MemClear</string>
    <string name="reset">Reset Current</string>
    <string name="rpnclear">Reset Stack (0)</string>
    <string name="rpnpush">Push (0)</string>
    
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">x</string>
    <string name="div">/</string>
    <string name="equals">=</string>
    <string name="point">\u00b7</string>
    
    <string name="neg">+/-</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>
    <string name="tan">TAN</string>
    <string name="log">LOG</string>
    <string name="square">X^2</string>
    <string name="sqrt">SQRT</string>
    <string name="second">2nd</string>
    <string name="sininv">SIN-1</string>
    <string name="cosinv">COS-1</string>
    <string name="taninv">TAN-1</string>
    <string name="ex">e^X</string>
    
    <string name="base">Switch Base</string>
    <string name="dec">Decimal</string>
    <string name="bin">Binary</string>
    <string name="oct">Octal</string>
    <string name="hex">Hexadecimal</string>
    
    <string name="mode">Switch Mode</string>
    <string name="basic">Basic Mode</string>
    <string name="rpn">RPN Mode</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>

</resources>