<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill_horizontal|fill_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="right"
        android:text="@string/zero"
        android:textSize="40sp"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical|fill_vertical" >

        <Button
            android:id="@+id/mempush"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/mempush" />

        <Button
            android:id="@+id/mempop"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/mempop" />

        <Button
            android:id="@+id/memclear"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/memclear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical|fill_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/reset"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/reset" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/root"
        android:layout_width="fill_parent"
        android:layout_height="271dp" >
    </FrameLayout>

</LinearLayout>